[gd_scene load_steps=7 format=3 uid="uid://7ipskc0dfl6a"]

[ext_resource type="Script" path="res://Scenes/UI/level_select.gd" id="1_75wsw"]
[ext_resource type="Theme" uid="uid://dkkg58pviiiq" path="res://OtherAssets/Menus.tres" id="2_xggjr"]
[ext_resource type="Script" path="res://Script/UI/buttons.gd" id="3_shaaw"]
[ext_resource type="Script" path="res://Script/UI/LevelSelect.gd" id="4_0v1s2"]
[ext_resource type="Texture2D" uid="uid://c4naqh7l8gjb7" path="res://Assets/StarEmpty.png" id="4_465q3"]

[sub_resource type="Theme" id="Theme_vqxne"]
Button/font_sizes/font_size = 48

[node name="LevelSelect" type="CanvasLayer"]
process_mode = 3
layer = 10
script = ExtResource("1_75wsw")

[node name="Panel" type="Panel" parent="."]
offset_left = 16.0
offset_top = 13.0
offset_right = 1136.0
offset_bottom = 633.0
theme = ExtResource("2_xggjr")

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_top = 5.0
offset_right = 1122.0
offset_bottom = 73.0
bbcode_enabled = true
text = "[center]Level Select
"

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 882.0
offset_top = 531.0
offset_right = 1097.0
offset_bottom = 597.0
text = "Back
"
script = ExtResource("3_shaaw")

[node name="Button2" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 34.0
offset_top = 531.0
offset_right = 249.0
offset_bottom = 597.0
text = "Main Menu
"
script = ExtResource("3_shaaw")

[node name="Level1" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 46.0
offset_top = 97.0
offset_right = 146.0
offset_bottom = 197.0
theme = SubResource("Theme_vqxne")
text = "1"
script = ExtResource("4_0v1s2")

[node name="Star1" type="TextureRect" parent="Panel/Level1"]
layout_mode = 0
offset_left = 13.0
offset_top = 74.0
offset_right = 29.0
offset_bottom = 90.0
texture = ExtResource("4_465q3")

[node name="Star2" type="TextureRect" parent="Panel/Level1"]
layout_mode = 0
offset_left = 42.0
offset_top = 74.0
offset_right = 58.0
offset_bottom = 90.0
texture = ExtResource("4_465q3")

[node name="Star3" type="TextureRect" parent="Panel/Level1"]
layout_mode = 0
offset_left = 71.0
offset_top = 74.0
offset_right = 87.0
offset_bottom = 90.0
texture = ExtResource("4_465q3")

[node name="Level2" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 166.0
offset_top = 97.0
offset_right = 266.0
offset_bottom = 197.0
theme = SubResource("Theme_vqxne")
text = "2
"
script = ExtResource("4_0v1s2")

[node name="Star1" type="TextureRect" parent="Panel/Level2"]
layout_mode = 0
offset_left = 13.0
offset_top = 74.0
offset_right = 29.0
offset_bottom = 90.0
texture = ExtResource("4_465q3")

[node name="Star2" type="TextureRect" parent="Panel/Level2"]
layout_mode = 0
offset_left = 42.0
offset_top = 74.0
offset_right = 58.0
offset_bottom = 90.0
texture = ExtResource("4_465q3")

[node name="Star3" type="TextureRect" parent="Panel/Level2"]
layout_mode = 0
offset_left = 71.0
offset_top = 74.0
offset_right = 87.0
offset_bottom = 90.0
texture = ExtResource("4_465q3")

[node name="Level3" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 286.0
offset_top = 97.0
offset_right = 386.0
offset_bottom = 197.0
theme = SubResource("Theme_vqxne")
text = "3
"
script = ExtResource("4_0v1s2")

[node name="Star1" type="TextureRect" parent="Panel/Level3"]
layout_mode = 0
offset_left = 13.0
offset_top = 74.0
offset_right = 29.0
offset_bottom = 90.0
texture = ExtResource("4_465q3")

[node name="Star2" type="TextureRect" parent="Panel/Level3"]
layout_mode = 0
offset_left = 42.0
offset_top = 74.0
offset_right = 58.0
offset_bottom = 90.0
texture = ExtResource("4_465q3")

[node name="Star3" type="TextureRect" parent="Panel/Level3"]
layout_mode = 0
offset_left = 71.0
offset_top = 74.0
offset_right = 87.0
offset_bottom = 90.0
texture = ExtResource("4_465q3")

[node name="Level4" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 414.0
offset_top = 97.0
offset_right = 514.0
offset_bottom = 197.0
theme = SubResource("Theme_vqxne")
text = "4
"
script = ExtResource("4_0v1s2")

[node name="Star1" type="TextureRect" parent="Panel/Level4"]
layout_mode = 0
offset_left = 13.0
offset_top = 74.0
offset_right = 29.0
offset_bottom = 90.0
texture = ExtResource("4_465q3")

[node name="Star2" type="TextureRect" parent="Panel/Level4"]
layout_mode = 0
offset_left = 42.0
offset_top = 74.0
offset_right = 58.0
offset_bottom = 90.0
texture = ExtResource("4_465q3")

[node name="Star3" type="TextureRect" parent="Panel/Level4"]
layout_mode = 0
offset_left = 71.0
offset_top = 74.0
offset_right = 87.0
offset_bottom = 90.0
texture = ExtResource("4_465q3")

[node name="Level5" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 542.0
offset_top = 97.0
offset_right = 642.0
offset_bottom = 197.0
theme = SubResource("Theme_vqxne")
text = "5
"
script = ExtResource("4_0v1s2")

[node name="Star1" type="TextureRect" parent="Panel/Level5"]
layout_mode = 0
offset_left = 13.0
offset_top = 74.0
offset_right = 29.0
offset_bottom = 90.0
texture = ExtResource("4_465q3")

[node name="Star2" type="TextureRect" parent="Panel/Level5"]
layout_mode = 0
offset_left = 42.0
offset_top = 74.0
offset_right = 58.0
offset_bottom = 90.0
texture = ExtResource("4_465q3")

[node name="Star3" type="TextureRect" parent="Panel/Level5"]
layout_mode = 0
offset_left = 71.0
offset_top = 74.0
offset_right = 87.0
offset_bottom = 90.0
texture = ExtResource("4_465q3")

[node name="Level6" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 670.0
offset_top = 97.0
offset_right = 770.0
offset_bottom = 197.0
theme = SubResource("Theme_vqxne")
text = "6
"
script = ExtResource("4_0v1s2")

[node name="Star1" type="TextureRect" parent="Panel/Level6"]
layout_mode = 0
offset_left = 13.0
offset_top = 74.0
offset_right = 29.0
offset_bottom = 90.0
texture = ExtResource("4_465q3")

[node name="Star2" type="TextureRect" parent="Panel/Level6"]
layout_mode = 0
offset_left = 42.0
offset_top = 74.0
offset_right = 58.0
offset_bottom = 90.0
texture = ExtResource("4_465q3")

[node name="Star3" type="TextureRect" parent="Panel/Level6"]
layout_mode = 0
offset_left = 71.0
offset_top = 74.0
offset_right = 87.0
offset_bottom = 90.0
texture = ExtResource("4_465q3")

[node name="Level7" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 798.0
offset_top = 97.0
offset_right = 898.0
offset_bottom = 197.0
tooltip_text = "Complete all level with 3 stars"
theme = SubResource("Theme_vqxne")
text = "?
"
script = ExtResource("4_0v1s2")

[connection signal="pressed" from="Panel/Button" to="Panel/Button" method="_on_back_pressed"]
[connection signal="pressed" from="Panel/Button2" to="Panel/Button2" method="_on_main_menu_pressed"]
[connection signal="pressed" from="Panel/Level1" to="." method="openLevel" binds= [1]]
[connection signal="pressed" from="Panel/Level2" to="." method="openLevel" binds= [2]]
[connection signal="pressed" from="Panel/Level3" to="." method="openLevel" binds= [3]]
[connection signal="pressed" from="Panel/Level4" to="." method="openLevel" binds= [4]]
[connection signal="pressed" from="Panel/Level5" to="." method="openLevel" binds= [5]]
[connection signal="pressed" from="Panel/Level6" to="." method="openLevel" binds= [6]]
[connection signal="pressed" from="Panel/Level7" to="." method="questionClicked"]
